--- a/Proiect/Frontend/src/app/login/components/login/login.component.scss
+++ b/Proiect/Frontend/src/app/login/components/login/login.component.scss
@@ -4,7 +4,7 @@
 
   h3 {
     margin-bottom: 50px;
-    color: #17a2b8;
+    color: aliceblue;
   }
 
   .shape1 {
@@ -95,5 +95,5 @@
 }
 
 a {
-  color: #17a2b8;
+  color: aliceblue;
 }
