--- a/Proiect/Frontend/src/app/shared/components/header/header.component.html
+++ b/Proiect/Frontend/src/app/shared/components/header/header.component.html
@@ -1,3 +1,4 @@
-<p>
-  header works!
-</p>
+<div class="title">
+    <!-- <img src="assets/cloud2.jpg" class="img-fluid" /> -->
+    cumulus
+</div>
