--- a/Proiect/Frontend/src/styles.scss
+++ b/Proiect/Frontend/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-image: linear-gradient(rgba(255,255,255,.35), rgba(255,255,255,.35)), url("sky.jpg");
+  background-color: #cccccc73;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
