--- a/Proiect/Frontend/src/app/test/components/questions/question/question.component.html
+++ b/Proiect/Frontend/src/app/test/components/questions/question/question.component.html
@@ -1,3 +1,51 @@
-<p>
-  question works!
-</p>
+<div class="_2-1wu">
+  <div class="_3IpBw">
+    <div class="_14lWn tZPfh">
+      <div data-test="challenge challenge-select" class="_1Y5M_ _2szQy">
+        <div class="_1ttrU Au17D _2CBTu">
+          <h1 data-test="challenge-header" class="_1Zqmf"><span>Care dintre următoarele este “băiat”?</span></h1>
+          <div class="_2qsw6">
+            <ul class="_2dSPZ _1w38l">
+              <li class="g1wrO _3H8zM _2q1CL _2Zh2S _1X3l0 eJd0I H7AnT _2Zn_t" data-test="challenge-choice-card"><label
+                  class="_24eMH">
+                  <div class="_3mQss Wcbs3">
+                    <div class="eSlsq">
+                      <div class="fzfrt"
+                        style="background-image: url(&quot;https://d2pur3iezf4d1j.cloudfront.net/images/f913a5d8cc1a1af8c5ecd3c158b7a014&quot;);">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="_2mgCd"><span class="_1xgIc"><span style="font-size: 17px;">girl</span></span><span
+                      class="_3PEcc _2ryEl q--Ob">1</span><input type="radio" value="0"></div>
+                </label></li>
+              <li class="g1wrO _3H8zM _2q1CL _2Zh2S _1X3l0 eJd0I H7AnT _2Zn_t" data-test="challenge-choice-card"><label
+                  class="_24eMH">
+                  <div class="_3mQss Wcbs3">
+                    <div class="eSlsq">
+                      <div class="fzfrt"
+                        style="background-image: url(&quot;https://d2pur3iezf4d1j.cloudfront.net/images/26f1b68d7b13638b60c436c5b0646f6a&quot;);">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="_2mgCd"><span class="_1xgIc"><span style="font-size: 17px;">woman</span></span><span
+                      class="_3PEcc _2ryEl q--Ob">2</span><input type="radio" value="1"></div>
+                </label></li>
+              <li class="g1wrO _3H8zM _2q1CL _2Zh2S _1X3l0 eJd0I H7AnT _2Zn_t" data-test="challenge-choice-card"><label
+                  class="_24eMH">
+                  <div class="_3mQss Wcbs3">
+                    <div class="eSlsq">
+                      <div class="fzfrt"
+                        style="background-image: url(&quot;https://d2pur3iezf4d1j.cloudfront.net/images/75491e7e12fbd25efb68b3cc02e02db7&quot;);">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="_2mgCd"><span class="_1xgIc"><span style="font-size: 17px;">boy</span></span><span
+                      class="_3PEcc _2ryEl q--Ob">3</span><input type="radio" value="2"></div>
+                </label></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
