--- a/Proiect/Frontend/src/app/test/components/questions/questions.component.html
+++ b/Proiect/Frontend/src/app/test/components/questions/questions.component.html
@@ -1,7 +1,6 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 
 <h1 class="text-center">Choose a category...</h1>
 <div class="container">
@@ -10,7 +9,6 @@
     <!--team-1-->
     <div class="col-lg-4">
       <div class="our-team-main">
-
         <div class="team-front">
           <img src="assets/animals.jpg" class="img-fluid" />
           <h3>Animals</h3>
@@ -18,14 +16,15 @@
         </div>
 
         <div class="team-back">
+
           <span>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-            Cum sociis
-            natoque penatibus et magnis dis parturient montes,
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-            Cum sociis
-            natoque.
+            Cu ajutorul jocurilor din categoria Animals, poti sa-ti insutesti cunostintele de baza prin joaca,
+            descoperind combinatiile corecte printre intrebari.
           </span>
+
+          <div class="text-center">
+            <a class="btn btn-primary generate btn btn-info btn-md" href="/generate" role="button">START</a>
+          </div>
         </div>
 
       </div>
@@ -44,13 +43,13 @@
 
         <div class="team-back">
           <span>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-            Cum sociis
-            natoque penatibus et magnis dis parturient montes,
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-            Cum sociis
-            natoque.
+            Cu ajutorul jocurilor din categoria Sports, poti sa-ti insutesti cunostintele de baza prin joaca,
+            descoperind combinatiile corecte printre intrebari.
           </span>
+
+          <div class="text-center">
+            <a class="btn btn-primary generate btn btn-info btn-md" href="/generate" role="button">START</a>
+          </div>
         </div>
 
       </div>
@@ -69,13 +68,13 @@
 
         <div class="team-back">
           <span>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-            Cum sociis
-            natoque penatibus et magnis dis parturient montes,
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-            Cum sociis
-            natoque.
+            Cu ajutorul jocurilor din categoria Colors, poti sa-ti insutesti cunostintele de baza prin joaca,
+            descoperind combinatiile corecte printre intrebari.
           </span>
+
+          <div class="text-center">
+            <a class="btn btn-primary generate btn btn-info btn-md" href="/generate" role="button">START</a>
+          </div>
         </div>
 
       </div>
