--- a/Proiect/Frontend/src/app/test/components/test-generator/test-generator.component.html
+++ b/Proiect/Frontend/src/app/test/components/test-generator/test-generator.component.html
@@ -1,3 +1,32 @@
-<p>
-  test-generator works!
-</p>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+<div class="container">
+
+  <div class="col-md-4">
+    <form>
+      <h2>Question</h2>
+      <div class="form-check">
+        <label>
+          <input type="radio" name="radio" checked> <span class="label-text">Option 01</span>
+        </label>
+      </div>
+      <div class="form-check">
+        <label>
+          <input type="radio" name="radio"> <span class="label-text">Option 02</span>
+        </label>
+      </div>
+      <div class="form-check">
+        <label>
+          <input type="radio" name="radio"> <span class="label-text">Option 03</span>
+        </label>
+      </div>
+      <div class="form-check">
+        <label>
+          <input type="radio" name="radio" disabled > <span class="label-text">Right answer</span> //hidden
+        </label>
+      </div>
+    </form>
+  </div>
+</div>
