--- a/Proiect/Frontend/src/app/test/components/questions/questions.component.html
+++ b/Proiect/Frontend/src/app/test/components/questions/questions.component.html
@@ -2,83 +2,17 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-<h1 class="text-center">Choose a category...</h1>
 <div class="container">
   <div class="row">
 
     <!--team-1-->
     <div class="col-lg-4">
-      <div class="our-team-main">
-        <div class="team-front">
-          <img src="assets/animals.jpg" class="img-fluid" />
-          <h3>Animals</h3>
-          <p>0/11</p>
-        </div>
-
-        <div class="team-back">
-
-          <span>
-            Cu ajutorul jocurilor din categoria Animals, poti sa-ti insutesti cunostintele de baza prin joaca,
-            descoperind combinatiile corecte printre intrebari.
-          </span>
-
-          <div class="text-center">
-            <a class="btn btn-primary generate btn btn-info btn-md" href="/generate" role="button">START</a>
+      <div class="our-team-main" #question>
+          <div *ngFor="let question of multiple_questions.questions">
+            <app-multiple-choise-question [question]=question></app-multiple-choise-question>
           </div>
-        </div>
-
+      </div>
       </div>
     </div>
     <!--team-1-->
-
-    <!--team-2-->
-    <div class="col-lg-4">
-      <div class="our-team-main">
-
-        <div class="team-front">
-          <img src="assets/sports.jpg" class="img-fluid" />
-          <h3>Sports</h3>
-          <p>1/12</p>
-        </div>
-
-        <div class="team-back">
-          <span>
-            Cu ajutorul jocurilor din categoria Sports, poti sa-ti insutesti cunostintele de baza prin joaca,
-            descoperind combinatiile corecte printre intrebari.
-          </span>
-
-          <div class="text-center">
-            <a class="btn btn-primary generate btn btn-info btn-md" href="/generate" role="button">START</a>
-          </div>
-        </div>
-
-      </div>
-    </div>
-    <!--team-2-->
-
-    <!--team-3-->
-    <div class="col-lg-4">
-      <div class="our-team-main">
-
-        <div class="team-front">
-          <img src="assets/colors.jpg" class="img-fluid" />
-          <h3>Colors</h3>
-          <p>5/6</p>
-        </div>
-
-        <div class="team-back">
-          <span>
-            Cu ajutorul jocurilor din categoria Colors, poti sa-ti insutesti cunostintele de baza prin joaca,
-            descoperind combinatiile corecte printre intrebari.
-          </span>
-
-          <div class="text-center">
-            <a class="btn btn-primary generate btn btn-info btn-md" href="/generate" role="button">START</a>
-          </div>
-        </div>
-
-      </div>
-    </div>
-    <!--team-3-->
   </div>
-</div>
