--- a/Proiect/Frontend/src/app/test/components/test-generator/test-generator.component.html
+++ b/Proiect/Frontend/src/app/test/components/test-generator/test-generator.component.html
@@ -1,37 +1,84 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
+<h1 class="text-center">Choose a category...</h1>
 <div class="container">
+  <div class="row">
 
-  <div class="col-md-4">
-    <form>
-      {{multiple_question.questions[0].question}}
-      <div class="form-check">
-        <label>
-          <input type="radio" name="radio" checked> <span class="label-text">{{multiple_question.questions[0].corect}}</span>
-        </label>
+    <!--team-1-->
+    <div class="col-lg-4">
+      <div class="our-team-main">
+        <div class="team-front">
+          <img src="assets/animals.jpg" class="img-fluid" />
+          <h3>Animals</h3>
+          <p>0/11</p>
+        </div>
+
+        <div class="team-back">
+
+          <span>
+            Cu ajutorul jocurilor din categoria Animals, poti sa-ti insutesti cunostintele de baza prin joaca,
+            descoperind combinatiile corecte printre intrebari.
+          </span>
+
+          <div class="text-center">
+            <a class="btn btn-primary generate btn btn-info btn-md" href="/generate/animals" role="button">START</a>
+          </div>
+        </div>
+
       </div>
-      <div class="form-check">
-        <label>
-          <input type="radio" name="radio"> <span class="label-text">{{multiple_question.questions[0].wrong_answers[0]}}</span>
-        </label>
+    </div>
+    <!--team-1-->
+
+    <!--team-2-->
+    <div class="col-lg-4">
+      <div class="our-team-main">
+
+        <div class="team-front">
+          <img src="assets/sports.jpg" class="img-fluid" />
+          <h3>Sports</h3>
+          <p>1/12</p>
+        </div>
+
+        <div class="team-back">
+          <span>
+            Cu ajutorul jocurilor din categoria Sports, poti sa-ti insutesti cunostintele de baza prin joaca,
+            descoperind combinatiile corecte printre intrebari.
+          </span>
+
+          <div class="text-center">
+            <a class="btn btn-primary generate btn btn-info btn-md" href="/generate/sports" role="button">START</a>
+          </div>
+        </div>
+
       </div>
-      <div class="form-check">
-        <label>
-          <input type="radio" name="radio"> <span class="label-text">{{multiple_question.questions[0].wrong_answers[1]}}</span>
-        </label>
+    </div>
+    <!--team-2-->
+
+    <!--team-3-->
+    <div class="col-lg-4">
+      <div class="our-team-main">
+
+        <div class="team-front">
+          <img src="assets/colors.jpg" class="img-fluid" />
+          <h3>Colors</h3>
+          <p>5/6</p>
+        </div>
+
+        <div class="team-back">
+          <span>
+            Cu ajutorul jocurilor din categoria Colors, poti sa-ti insutesti cunostintele de baza prin joaca,
+            descoperind combinatiile corecte printre intrebari.
+          </span>
+
+          <div class="text-center">
+            <a class="btn btn-primary generate btn btn-info btn-md" href="/generate/colors" role="button">START</a>
+          </div>
+        </div>
+
       </div>
-      <div class="form-check">
-        <label>
-          <input type="radio" name="radio"> <span class="label-text">{{multiple_question.questions[0].wrong_answers[2]}}</span>
-        </label>
-      </div>
-      <div class="form-check">
-        <label>
-          <input type="radio" name="radio" disabled > <span class="label-text">Right answer</span> //hidden
-        </label>
-      </div>
-    </form>
+    </div>
+    <!--team-3-->
   </div>
 </div>
