--- a/Proiect/Frontend/src/app/test/components/test-generator/test-generator.component.scss
+++ b/Proiect/Frontend/src/app/test/components/test-generator/test-generator.component.scss
@@ -1,136 +1,74 @@
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-
 body {
-  padding: 50px;
+  background: #00bcd4;
 }
 
-label {
-  position: relative;
-  cursor: pointer;
+h1 {
   color: aliceblue;
-  font-size: 30px;
+  margin: 40px 0 60px 0;
+  font-weight: 400;
 }
 
-input {
-  &[type="checkbox"], &[type="radio"] {
-    position: absolute;
-    right: 9000px;
+.our-team-main {
+  width: 100%;
+  height: auto;
+  border-bottom: 5px #323233 solid;
+  background: #fff;
+  text-align: center;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  transition: 0.5s;
+  margin-bottom: 28px;
+
+  img {
+    border-radius: 50%;
+    margin-bottom: 20px;
+    width: 90px;
   }
 
-  &[type="checkbox"] {
-    + .label-text:before {
-      content: "\f096";
-      font-family: "FontAwesome";
-      font-style: normal;
-      font-weight: normal;
-      font-variant: normal;
-      text-transform: none;
-      line-height: 1;
-      -webkit-font-smoothing: antialiased;
-      width: 1em;
-      display: inline-block;
-      margin-right: 5px;
-    }
-
-    &:checked + .label-text:before {
-      content: "\f14a";
-      color: #2980b9;
-      animation: effect 250ms ease-in;
-    }
-
-    &:disabled + .label-text {
-      color: #aaa;
-
-      &:before {
-        content: "\f0c8";
-        color: #ccc;
-      }
-    }
+  h3 {
+    font-size: 20px;
+    font-weight: 700;
   }
 
-  &[type="radio"] {
-    + .label-text:before {
-      content: "\f10c";
-      font-family: "FontAwesome";
-      font-style: normal;
-      font-weight: normal;
-      font-variant: normal;
-      text-transform: none;
-      line-height: 1;
-      -webkit-font-smoothing: antialiased;
-      width: 1em;
-      display: inline-block;
-      margin-right: 5px;
-    }
-
-    &:checked + .label-text:before {
-      content: "\f192";
-      color: #8e44ad;
-      animation: effect 250ms ease-in;
-    }
-
-    &:disabled + .label-text {
-      color: #aaa;
-
-      &:before {
-        content: "\f111";
-        color: #ccc;
-      }
-    }
+  p {
+    margin-bottom: 0;
   }
 }
 
-/*Check box*/
-
-/*Radio box*/
-
-/*Radio Toggle*/
-
-.toggle input[type="radio"] {
-  + .label-text:before {
-    content: "\f204";
-    font-family: "FontAwesome";
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    width: 1em;
-    display: inline-block;
-    margin-right: 10px;
-  }
-
-  &:checked + .label-text:before {
-    content: "\f205";
-    color: #16a085;
-    animation: effect 250ms ease-in;
-  }
-
-  &:disabled + .label-text {
-    color: #aaa;
-
-    &:before {
-      content: "\f204";
-      color: #ccc;
-    }
-  }
+.team-back {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 5px 15px 0 15px;
+  text-align: left;
+  background: #fff;
 }
 
-@keyframes effect {
-  0% {
-    transform: scale(0);
+.team-front {
+  width: 100%;
+  height: auto;
+  position: relative;
+  z-index: 10;
+  background:aliceblue;
+  padding: 15px;
+  bottom: 0px;
+  transition: all 0.5s ease;
+}
+
+.our-team-main:hover {
+  .team-front {
+    bottom: -200px;
+    transition: all 0.5s ease;
   }
 
-  25% {
-    transform: scale(1.3);
-  }
+  border-color: rgb(48, 45, 45);
+  transition: 0.5s;
+}
 
-  75% {
-    transform: scale(1.4);
-  }
-
-  100% {
-    transform: scale(1);
-  }
+.generate {
+  position: relative;
+  margin-top: 20px;
 }
