--- a/Proiect/Frontend/src/app/home/components/home/home.component.html
+++ b/Proiect/Frontend/src/app/home/components/home/home.component.html
@@ -1,1 +1,25 @@
-Homepage
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4">
+            <img src="assets/cumulus_1.png" class="img-fluid" />
+        </div>
+        <div class="col-lg-8">
+            <div class="description">
+                <h4>Cumulus:</h4>
+                Aplicatia are ca scop oferirea unui mediu placut de invatare al unei limbi straine. In
+                etapa actuala a aplicatiei utilizatorii isi vor putea testa cunostintele cu ajutorul unor seturi de
+                intrebari cu o dificultate redusa ( variante de raspuns sau input) , impartite pe diferite domenii
+                ( animale, sporturi, ocupatii, culori) care se adreseaza utilizatorilor incepatori. Utilizatorii tinta
+                sunt copii cu varsta peste 6 ani precum si adultii care doresc sa isi imbunatateasca
+                cunostintele sau sa invete o limba straina.
+                <br>
+                <br>
+                <a class="btn btn-primary generate btn btn-info btn-md" href="/newtest" role="button">SA INCEPEM</a>
+            </div>
+        </div>
+    </div>
+</div>
