--- a/Proiect/Frontend/src/app/home/components/home/home.component.html
+++ b/Proiect/Frontend/src/app/home/components/home/home.component.html
@@ -4,16 +4,16 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-md-6">
             <img src="assets/cumulus_1.png" class="img-fluid" />
         </div>
-        <div class="col-lg-8">
+        <div class="col-md-6">
             <div class="description">
-                <h4>Cumulus:</h4>
+                <h4>CUMULUS</h4>
                 Aplicatia are ca scop oferirea unui mediu placut de invatare al unei limbi straine. In
                 etapa actuala a aplicatiei utilizatorii isi vor putea testa cunostintele cu ajutorul unor seturi de
-                intrebari cu o dificultate redusa ( variante de raspuns sau input) , impartite pe diferite domenii
-                ( animale, sporturi, ocupatii, culori) care se adreseaza utilizatorilor incepatori. Utilizatorii tinta
+                intrebari cu o dificultate redusa (variante de raspuns sau input), impartite pe diferite domenii
+                (animale, sporturi, ocupatii, culori) care se adreseaza utilizatorilor incepatori. Utilizatorii tinta
                 sunt copii cu varsta peste 6 ani precum si adultii care doresc sa isi imbunatateasca
                 cunostintele sau sa invete o limba straina.
                 <br>
