--- a/Proiect/Frontend/src/app/test/components/questions/input-questions/input-questions.component.html
+++ b/Proiect/Frontend/src/app/test/components/questions/input-questions/input-questions.component.html
@@ -6,10 +6,13 @@
   <h4>
     {{question.question}}
   </h4>
-  <form #answer="ngForm" (ngSubmit)="onClickSubmit(answer.value)">
+  <form #answer="ngForm" (ngSubmit)="onClickSubmit()">
     <div class="form-check">
       <input type="text" name="answer" ngModel>
     </div>
-    <button class="button" type="submit">Next</button>
+    <button class="button btn btn-info btn-md" type="button" (click)="onCheck(answer.value)">Check</button>
+    <button class="button btn-next btn btn-info btn-md" [class.hidden]="!hasChecked" type="submit">Next</button>
+    <p id="correct" *ngIf="hasChecked && isCorrect; else hasChecked && isWrong">Raspunsul este corect!</p>
+    <ng-template #isWrong><p id="wrong">Raspuns gresit!</p></ng-template>
   </form>
 </div>
