--- a/Proiect/Frontend/src/app/test/components/test-generator/test-generator.component.scss
+++ b/Proiect/Frontend/src/app/test/components/test-generator/test-generator.component.scss
@@ -5,7 +5,7 @@ body {
 h1 {
   color: aliceblue;
   margin: 40px 0 60px 0;
-  font-weight: 400;
+  //font-weight: 400;
 }
 
 .our-team-main {
@@ -28,7 +28,7 @@ h1 {
 
   h3 {
     font-size: 20px;
-    font-weight: 700;
+    //font-weight: 700;
   }
 
   p {
