--- a/Proiect/Frontend/src/app/test/components/questions/input-questions/input-questions.component.scss
+++ b/Proiect/Frontend/src/app/test/components/questions/input-questions/input-questions.component.scss
@@ -176,3 +176,10 @@ h4 {
   position: relative;
   font-size: 25px;
 }
+
+.title {
+  position: relative;
+  font-size: 30px;
+  color: rgb(127, 13, 131);
+  font-family: cursive;
+}
