--- a/Proiect/Frontend/src/app/test/components/questions/multiple_choise_question/multiple_choise_question.component.html
+++ b/Proiect/Frontend/src/app/test/components/questions/multiple_choise_question/multiple_choise_question.component.html
@@ -3,7 +3,7 @@
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 <div class="container">
-  <h4>
+  <h4 class= "title">
     {{question.question}}
   </h4>
   <form #answer="ngForm" (ngSubmit)="onClickSubmit()">
