--- a/Proiect/Frontend/src/app/test/components/questions/multiple_choise_question/multiple_choise_question.component.scss
+++ b/Proiect/Frontend/src/app/test/components/questions/multiple_choise_question/multiple_choise_question.component.scss
@@ -166,3 +166,9 @@ h4{
   position: relative;
   font-size: 25px;
 }
+.title {
+  position: relative;
+  font-size: 30px;
+  color: rgb(127, 13, 131);
+  font-family: cursive;
+}
