--- a/Proiect/Frontend/src/app/shared/components/header/header.component.html
+++ b/Proiect/Frontend/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="title">
     <!-- <img src="assets/cloud2.jpg" class="img-fluid" /> -->
-    cumulus
+    <a href='/home'>cumulus</a>
 </div>
