--- a/Proiect/Frontend/src/app/shared/components/header/header.component.scss
+++ b/Proiect/Frontend/src/app/shared/components/header/header.component.scss
@@ -1,14 +1,22 @@
 :host {
   width: 100%;
-  height: 40px;
+  height: 50px;
   display: block;
   z-index: 1;
+  background-color: rgba(216, 219, 221, 0.35);
+
 
   .title {
-    float: left;
-    padding-left: 50px;
-    font-size: 30px;
-    color: aliceblue;
-    font-family: cursive;
+    a {
+      float: left;
+      padding-left: 50px;
+      font-size: 30px;
+      color: aliceblue;
+      font-family: cursive;
+
+      &:hover {
+        text-decoration: unset;
+      }
+    }
   }
 }
